--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,6 +17,7 @@
         </svg>
       </a>
       <div class="trigger">
+        <a class="page-link" href="http://www.pathsource.com/about">About</a>
         {% for page in site.pages %}
           <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
         {% endfor %}
